--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,9 +1,3 @@
 .main {
-  display: flex;
-  height: calc(100vh - 64px);
-  background-color: white;
-}
-
-.main > section {
-  padding: 32px;
+background: 100%;
 }
