--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -3,6 +3,11 @@
     src: url('../styles/xkcd.ttf') format('truetype');
    }
 
+   @font-face {
+    font-family: 'Inter';
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap') format('truetype');
+   }
+
    html, body {
   font-family: "Inter", sans-serif;
 }
